Add particle intersection example. Add onExitRequested hook.
Allow clean up of resources or request that the application not be closed. Update gallery example to not use a tab controller because currently on Nature of Code examples have been written. Update canvas_ops.RawAtlas() to match the optional parameters of the corresponding canvas function. Update mouse handling in a few examples. Use simpler version specifiers in pubspec.yaml.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: '>=1.18.0 <2.0.0'
-  vector_math: '>=2.1.4 <3.0.0'
-  logger: '>=2.3.0 <3.0.0'
+  collection: ^1.18.0
+  vector_math: ^2.1.4
+  logger: ^2.3.0
 
 
 dev_dependencies:
