--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,12 +1,13 @@
 name: floss
 description: 'Floss is a vector graphics abstraction layer for Flutter.'
-version: 0.1.0+2
+version: 0.2.0
 homepage: https://github.com/tyler-conrad/floss
 repository: https://github.com/tyler-conrad/floss.git
 publish_to: none
 
 environment:
   sdk: ^3.7.2
+  flutter: ">=1.17.0"
 
 dependencies:
   flutter:
